--- a/src/styles/pages/blog.scss
+++ b/src/styles/pages/blog.scss
@@ -42,5 +42,8 @@ $padding: 1rem;
     &__content {
         width: -moz-fit-content;
         width: fit-content;
+        
+        text-wrap: nowrap;
+        text-overflow: ellipsis;
     }
 }
