--- a/src/styles/pages/blog.scss
+++ b/src/styles/pages/blog.scss
@@ -13,7 +13,7 @@ $padding: 1rem;
     box-sizing: border-box;
     padding: $padding;
 
-    aspect-ratio: 3 / 4;
+    // aspect-ratio: 3 / 4;
 
     background: var(--middle-color);
     color: inherit;
