--- a/src/pages/post/[..slug].astro
+++ b/src/pages/post/[..slug].astro
@@ -3,6 +3,8 @@ import '../styles/pages/[about, contact].scss'
 
 import Layout from '../layouts/Layout.astro'
 
+
+await fetch(`https://blogfeed.adarshrkumar.dev/getPost?p=`);
 ---
 <Layout title="Blog Post">
 </Layout>
