--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -4,8 +4,46 @@ import '../styles/pages/blog.scss'
 import Layout from '../layouts/Layout.astro'
 
 import Script from '../utils/script.astro'
+
+var postsEle = document.querySelector('.posts')
+var posts = []
+
+await fetch('https://blogfeed.adarshrkumar.dev/getAllPosts')
+  .then(response => response.json())
+  .then(json => {posts = json})
+  .catch(err => console.error(err))
+
 ---
 <Layout title="Blog">
-  <section class="posts"></section>
+  <section class="posts">
+    {
+      posts.map(function(post, i) {
+        if (!post.image) {
+          post.image = {}
+          post.image.src = `https://image.thum.io/get/maxAge/12/width/${250}/${location.protocol}//${location.host}/post/${post.slug}`
+          post.image.alt = `Screenshot of the "${post.title}" post.`
+        }
+        if (post.content) {
+          if (post.content.includes('&lt;')) post.content = post.content.split('&lt;').join('<')
+          if (post.content.includes('&gt;')) post.content = post.content.split('&gt;').join('>')
+          if (post.content.includes('\n')) post.content = post.content.split('\n').join('')
+        }
+        
+        return (<a href={`/post/${post.slug}`} class="post">
+          <img class="post__img" src={post.image.src} alt={post.image.alt} />
+          {
+            !!(post.title || post.content) ? <div class="post__info">
+              {
+                !!post.title ? <h3 class="post__title">{post.title}</h3> : ''
+              }
+              {
+                !!post.content ? <p class="post__content">{post.content}</p> : ''
+              }
+            </div> : ''
+          }
+        </a>)
+      })
+    }
+  </section>
   <Script name="blog" />
 </Layout>
