--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -7,9 +7,13 @@ import Script from '../utils/script.astro'
 
 var posts = []
 
+var site = Astro.site
+if (site.includes('://')) site = site.split('://')[1]
+if (site.endsWith('/')) site = site.slice(0, -1)
+
 var location = {
   protocol: 'https:', 
-  host: Astro.site, 
+  host: site, 
 }
 
 await fetch('https://blogfeed.adarshrkumar.dev/getAllPosts')
