--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -7,7 +7,7 @@ import Script from '../utils/script.astro'
 
 var posts = []
 
-var site = Astro.site
+var site = Astro.site.toString()
 if (site.includes('://')) site = site.split('://')[1]
 if (site.endsWith('/')) site = site.slice(0, -1)
 
