--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -32,9 +32,8 @@ await fetch('https://blogfeed.adarshrkumar.dev/getAllPosts')
           post.image.alt = `Screenshot of the "${post.title}" post.`
         }
         if (post.content) {
-          if (post.content.includes('&lt;')) post.content = post.content.split('&lt;').join('<')
-          if (post.content.includes('&gt;')) post.content = post.content.split('&gt;').join('>')
-          if (post.content.includes('\n')) post.content = post.content.split('\n').join('')
+          if (post.content.includes('\n')) post.content = post.content.split('\n').join(' ')
+          if (post.content.includes('  ')) post.content = post.content.split('  ').join(' ')
         }
         
         return (<a href={`/post/${post.slug}`} class="post">
@@ -45,7 +44,7 @@ await fetch('https://blogfeed.adarshrkumar.dev/getAllPosts')
                 !!post.title ? <h3 class="post__title">{post.title}</h3> : ''
               }
               {
-                !!post.content ? <p class="post__content">{post.content}</p> : ''
+                !!post.content ? <p class="post__content">{post.content.includes(' ') ? post.content.split(' ').slice(0, 10).join(' ') : post.content}</p> : ''
               }
             </div> : ''
           }
