--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -1,6 +1,10 @@
 ---
 import '../styles/components/sidebar.scss'
 
+import getChannelsInfo from './getChannelsInfo'
+
+var channelsInfo = getChannelsInfo()
+
 import Nav from './nav.astro'
 
 import Script from '../utils/script.astro'
