--- a/src/pages/soon.astro
+++ b/src/pages/soon.astro
@@ -9,11 +9,11 @@ import Layout from '../layouts/Layout.astro'
   <hr>
   <br>
   <!-- ShareThis BEGIN --><div class="sharethis-inline-follow-buttons" style="display: none;"></div><!-- ShareThis END -->
-  <p>This site is under development right now, I will put something soon!</p>
-  <p>In the meantime, you can email me at: <a href="mailto:Site@RockGamerAK.com">Site@RockGamerAK.com</a>.</p>
-  <hr>
-  <h1>Credits: </h1>
-  <p>Main Contributer: <a href="https://solo.to/RockGamerAK">RockGamerAK</a></p>
+  <p>This site is under development right now, I will put something here soon!</p>
+  <p>In the meantime, you can email me at: <a href="mailto:adarshrkumar+site@aol.com">adarshrkumar+site@aol.com</a>.</p>
+  <!-- <hr> -->
+  <!-- <h1>Credits: </h1> -->
+  <!-- <p>Main Contributer: <a href="https://solo.to/adarshrkumar">adarshrkumar</a></p> -->
   <script>
     var img = document.querySelector('.logo')
     var operation
