--- a/src/pages/soon.astro
+++ b/src/pages/soon.astro
@@ -14,7 +14,7 @@ import Layout from '../layouts/Layout.astro'
   <!-- <hr> -->
   <!-- <h1>Credits: </h1> -->
   <!-- <p>Main Contributer: <a href="https://solo.to/adarshrkumar">adarshrkumar</a></p> -->
-  <script>
+  <script is:inline>
     var img = document.querySelector('.logo')
     var operation
     function go() {
