--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@ import '../styles/globals.scss'
 import '../styles/root.scss'
 
 import Header from '../components/header.astro'
-// import Sidebar from '../components/sidebar.astro'
+import Sidebar from '../components/sidebar.astro'
 
 import Script from '../utils/script.astro'
 
@@ -52,7 +52,7 @@ if (className.startsWith(' ')) className = className.substring(1)
           <slot />
         </div>
       </main>
-      <!-- <Sidebar /> -->
+      <Sidebar />
     </div>
     <Script name="main" />
     <!-- <script src="/eruda.js" is:inline></script> -->
