--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,4 +1,4 @@
----
+<!-- ---
 import '../styles/pages/404.scss'
 
 import Layout from '../layouts/Layout.astro'
@@ -53,4 +53,4 @@ let aHTML = ``
       }
     })
   </script>
-</Layout>
+</Layout> -->
