--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,4 @@
----
+<!-- ---
 // import '../styles/libraries/fire.scss'
 
 import '../styles/globals.scss'
@@ -70,4 +70,4 @@ if (className.startsWith(' ')) className = className.substring(1)
     </script>
     <!--End of Tawk.to Script-->
   </body>
-</html>
+</html> -->
