--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,13 +1,11 @@
-<!-- ---
-// import '../styles/libraries/fire.scss'
-
+---
 import '../styles/globals.scss'
 import '../styles/root.scss'
 
-import Header from '../components/header.astro'
-import Sidebar from '../components/sidebar.astro'
+// import Header from '../components/header.astro'
+// import Sidebar from '../components/sidebar.astro'
 
-import Script from '../utils/script.astro'
+// import Script from '../utils/script.astro'
 
 var sName = 'Adarsh Kumar'
 var sURL = 'https://AdarshRKumar.dev'
@@ -69,4 +67,4 @@ if (className.startsWith(' ')) className = className.substring(1)
     </script>
     <!--End of Tawk.to Script-->
   </body>
-</html> -->
+</html>
