--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,7 +41,7 @@ if (className.startsWith(' ')) className = className.substring(1)
     <Script name="settings" />
   </head>
   <body>
-    <Header siteDomain={sURL} logo={logoSRC} />
+    <!-- <Header siteDomain={sURL} logo={logoSRC} /> -->
     <div class="wrapper">
       <main class="content" id="content">
         <h1 class="page-title">{pTitle}</h1>
@@ -49,9 +49,9 @@ if (className.startsWith(' ')) className = className.substring(1)
           <slot />
         </div>
       </main>
-      <Sidebar />
+      <!-- <Sidebar /> -->
     </div>
-    <Script name="main" />
+    <!-- <Script name="main" /> -->
     <!-- <script src="/eruda.js" is:inline></script> -->
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
