--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,7 +38,7 @@ if (className.startsWith(' ')) className = className.substring(1)
     <base href={sURL} />
     <link rel="icon" href="/assets/favicon.png">
     <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=625cc7f8cb9e7d001955b4a3&product=sop' async='async'></script>
-    <Script name="settings" />
+    <!-- <Script name="settings" /> -->
   </head>
   <body>
     <!-- <Header siteDomain={sURL} logo={logoSRC} /> -->
