--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@ import '../styles/root.scss'
 // import Header from '../components/header.astro'
 // import Sidebar from '../components/sidebar.astro'
 
-// import Script from '../utils/script.astro'
+import Script from '../utils/script.astro'
 
 var sName = 'Adarsh Kumar'
 var sURL = 'https://AdarshRKumar.dev'
@@ -38,7 +38,7 @@ if (className.startsWith(' ')) className = className.substring(1)
     <base href={sURL} />
     <link rel="icon" href="/assets/favicon.png">
     <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=625cc7f8cb9e7d001955b4a3&product=sop' async='async'></script>
-    <!-- <Script name="settings" /> -->
+    <Script name="settings" />
   </head>
   <body>
     <!-- <Header siteDomain={sURL} logo={logoSRC} /> -->
@@ -51,7 +51,7 @@ if (className.startsWith(' ')) className = className.substring(1)
       </main>
       <!-- <Sidebar /> -->
     </div>
-    <!-- <Script name="main" /> -->
+    <Script name="main" />
     <!-- <script src="/eruda.js" is:inline></script> -->
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
