--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import '../styles/globals.scss'
 import '../styles/root.scss'
 
-// import Header from '../components/header.astro'
+import Header from '../components/header.astro'
 // import Sidebar from '../components/sidebar.astro'
 
 import Script from '../utils/script.astro'
@@ -41,7 +41,7 @@ if (className.startsWith(' ')) className = className.substring(1)
     <Script name="settings" />
   </head>
   <body>
-    <!-- <Header siteDomain={sURL} logo={logoSRC} /> -->
+    <Header siteDomain={sURL} logo={logoSRC} />
     <div class="wrapper">
       <main class="content" id="content">
         <h1 class="page-title">{pTitle}</h1>
