--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -40,6 +40,7 @@ let aHTML = ``
           if (!redirect.slug.endsWith('/') && path.endsWith('/')) {
             path = path.slice(0. -1)
           }
+          alert(path.startsWith(begining) && page.endsWith(end))
           if (path.startsWith(begining) && page.endsWith(end)) {
             path = path.slice(begining.length, (
               end.length === 0 ? path.length : -1*end.length
