--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -40,7 +40,7 @@ let aHTML = ``
           if (!redirect.slug.endsWith('/') && path.endsWith('/')) {
             path = path.slice(0. -1)
           }
-          alert(`${path.startsWith(begining)} && ${path.endsWith(end)}`)
+          alert(`${path} && ${begining}`)
           if (path.startsWith(begining) && path.endsWith(end)) {
             path = path.slice(begining.length, (
               end.length === 0 ? path.length : -1*end.length
