--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -21,7 +21,7 @@ let aHTML = ``
     }
     var redirects = [
       {
-        slug: '/posts/[path]', 
+        slug: '/post/[path]', 
         dest: '/blogPost?id=[path]', 
       }
     ]
