--- a/src/pages/blogPost.astro
+++ b/src/pages/blogPost.astro
@@ -3,12 +3,15 @@ import '../styles/pages/[about, contact].scss'
 
 import Layout from '../layouts/Layout.astro'
 
-await fetch(`https://blogfeed.adarshrkumar.dev/getPost?p=`)
+var content = ''
+await fetch(`https://blogfeed.adarshrkumar.dev/getPost?p=${Astro.request.query.p}`)
     .then(response => response.json())
     .then(json => {
+        content = json
     })
 
 
 ---
 <Layout title="Blog Post">
+    {content}
 </Layout>
