--- a/src/pages/blogPost.astro
+++ b/src/pages/blogPost.astro
@@ -3,8 +3,13 @@ import '../styles/pages/[about, contact].scss'
 
 import Layout from '../layouts/Layout.astro'
 
+var postId = null
+if (Astro.request.query) {
+    if (Astro.request.query.p) postId = Astro.request.query.p
+}
+
 var content = ''
-await fetch(`https://blogfeed.adarshrkumar.dev/getPost?p=${Astro.request.query.p}`)
+await fetch(`https://blogfeed.adarshrkumar.dev/getPost?p=${postId}`)
     .then(response => response.json())
     .then(json => {
         content = json
