--- a/src/pages/blogPost.astro
+++ b/src/pages/blogPost.astro
@@ -9,7 +9,7 @@ if (Astro.request.query) {
 }
 
 var content = ''
-await fetch(`https://blogfeed.adarshrkumar.dev/getPost?p=${postId}`)
+await fetch(`https://blogfeed.adarshrkumar.dev/getPost?path=${postId}`)
     .then(response => response.json())
     .then(json => {
         content = json
