--- a/src/pages/blogPost.astro
+++ b/src/pages/blogPost.astro
@@ -18,5 +18,5 @@ await fetch(`https://blogfeed.adarshrkumar.dev/getPost?path=${postId}`)
 
 ---
 <Layout title="Blog Post">
-    {content}
+    {JSON.stringify(content)}
 </Layout>
