--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -60,7 +60,7 @@ channels.forEach(function(c, i) {
                     if (!!c[p.name] === false) c[p.name] = p.default
                 })
 
-                return (<div className="channel-container">
+                return (<div class="channel-container">
                     <div class="g-ytsubscribe" data-channelid={c.id} data-layout={c.layout} data-count={c.count}></div>
                 </div>)
             })
