--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -35,6 +35,7 @@
 
     .channel-container {
         box-sizing: border-box;
+        padding: 2px;
 
         border: solid 1px var(--color);
         border-radius: 6px;
