--- a/src/pages/blogPost.astro
+++ b/src/pages/blogPost.astro
@@ -17,6 +17,6 @@ await fetch(`https://blogfeed.adarshrkumar.dev/getPost?path=${postId}`)
 
 
 ---
-<Layout title="Blog Post">
+<Layout title="Blog Post" pageType="post">
     {JSON.stringify(content)}
 </Layout>
