--- a/src/pages/blogPost.astro
+++ b/src/pages/blogPost.astro
@@ -18,5 +18,6 @@ await fetch(`https://blogfeed.adarshrkumar.dev/getPost?path=${postId}`)
 
 ---
 <Layout title="Blog Post" pageType="post">
-    {JSON.stringify(content)}
+    {postId}
+    <!-- {JSON.stringify(content)} -->
 </Layout>
