create and use post.scss

--- a/src/pages/blogPost.astro
+++ b/src/pages/blogPost.astro
@@ -1,5 +1,6 @@
 ---
 import '../styles/pages/[about, contact].scss'
+import '../styles/pages/post.scss'
 
 import Layout from '../layouts/Layout.astro'
 
