--- a/src/pages/blogPost.astro
+++ b/src/pages/blogPost.astro
@@ -19,6 +19,6 @@ await fetch(`https://blogfeed.adarshrkumar.dev/getPost?path=${postId}`)
 
 ---
 <Layout title="Blog Post" pageType="post">
-    {postId}
+    {JSON.stringify(Astro.request.query)}
     <!-- {JSON.stringify(content)} -->
 </Layout>
