--- a/src/pages/blogPost.astro
+++ b/src/pages/blogPost.astro
@@ -4,10 +4,7 @@ import '../styles/pages/post.scss'
 
 import Layout from '../layouts/Layout.astro'
 
-var postId = null
-if (Astro.request.query) {
-    if (Astro.request.query.id) postId = Astro.request.query.id
-}
+var postId = Astro.url.searchParams.get('id') || ''
 
 var content = {}
 await fetch(`https://blogfeed.adarshrkumar.dev/getPost?path=${postId}`)
