--- a/src/pages/blogPost.astro
+++ b/src/pages/blogPost.astro
@@ -4,7 +4,7 @@ import '../styles/pages/post.scss'
 
 import Layout from '../layouts/Layout.astro'
 
-var postId = Astro.url.searchParams.get('id') || ''
+var postId = Astro.url.searchParams.get('id') ? Astro.url.searchParams.get('id') : ''
 
 var content = {}
 await fetch(`https://blogfeed.adarshrkumar.dev/getPost?path=${postId}`)
