--- a/src/pages/blogPost.astro
+++ b/src/pages/blogPost.astro
@@ -21,7 +21,7 @@ import Layout from '../layouts/Layout.astro'
         var postEle = document.querySelector('.post')
 
         document.querySelector('.page-title').textContent = post.title
-        dcument.title = `${post.title} | ${document.title}`
+        document.title = `${post.title} | ${document.title}`
 
         console.log(post)
     </script>
