--- a/src/pages/blogPost.astro
+++ b/src/pages/blogPost.astro
@@ -5,7 +5,7 @@ import '../styles/pages/post.scss'
 import Layout from '../layouts/Layout.astro'
 
 ---
-<Layout title="Post" pageType="post">
+<Layout title="Blog" pageType="post">
     <script>
         const urlSearchParams = new URLSearchParams(window.location.search);
         const postId = urlSearchParams.get('id');
