--- a/src/pages/blogPost.astro
+++ b/src/pages/blogPost.astro
@@ -27,6 +27,7 @@ import Layout from '../layouts/Layout.astro'
         if (post.code === 200) {
             var postEle = document.querySelector('.post')
             var infoEle = postEle.querySelector('.info')
+            var author = post.author
             
             document.querySelector('.page-title').textContent = post.title
             document.title = `${post.title} | ${document.title}`
