--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -15,7 +15,7 @@ var navItems = [
     // { name: 'Contact' }, 
     { name: 'Portfolio' }, 
     { name: 'Projects' }, 
-    { name: 'Blog', url: 'https://blog.adarshrkumar.dev' }, 
+    { name: 'Blog' }, 
     // { name: 'Videos' }, 
 ]
 
