--- a/src/styles/pages/post.scss
+++ b/src/styles/pages/post.scss
@@ -15,9 +15,13 @@
 }
 
 .post {
+    padding: 0;
     display: flex;
     flex-direction: column;
 
+    .info, .content {
+        padding: 8px;
+    }
     .content {
         flex: 1;
 
