--- a/src/pages/blogPost.astro
+++ b/src/pages/blogPost.astro
@@ -5,7 +5,7 @@ import '../styles/pages/post.scss'
 import Layout from '../layouts/Layout.astro'
 
 ---
-<Layout title="Blog" pageType="post" classList="ignorePadding">
+<Layout title="Blog" pageType="post" classItems="ignorePadding">
     <section class="info">
         <a href="/authors" class="author">See All Authors</a> | <span class="date">Today</span>
     </section>
