--- a/src/pages/authorPage.astro
+++ b/src/pages/authorPage.astro
@@ -5,7 +5,7 @@ import '../styles/pages/author.scss'
 import Layout from '../layouts/Layout.astro'
 
 ---
-<Layout title="Blog" pageType="author" classItems="ignorePadding">
+<Layout title="Author" pageType="author" classItems="ignorePadding">
     <section class="info">
         <a href="/authors" class="author">See All Authors</a> | <span class="date">Today</span>
     </section>
