--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -27,8 +27,8 @@ $dark-link-visited: #551A8B;
 
 
 * {
-    // font-family: 'Montserrat', sans-serif;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    // font-family: 'Inter', sans-serif;
     :not(nav *) {
         box-sizing: border-box;
     }
