--- a/src/styles/pages/author.scss
+++ b/src/styles/pages/author.scss
@@ -11,7 +11,7 @@
     width: clamp(400px, 100%, 600px);
 
     background-color: var(--middle-color);
-    color: var(--);
+    color: var(--bg);
 
     border-radius: 32px;
 
