--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -174,7 +174,7 @@ hr[isDivider] {
     margin: 0;
     padding-block: 1.26375rem;
 
-    border-bottom: 0.09375rem solid var(--color);
+    border-bottom: 1px solid var(--color);
 
     text-align: center;
 }
